Added performance tests

--- a/playwright/test.config.sample.yml
+++ b/playwright/test.config.sample.yml
@@ -12,6 +12,7 @@ UnauthenticatedChatOutsideOfOperatingHours:
 UnauthenticatedChatWithChatReconnect:
 UnauthenticatedChatWithMasking:
 UnauthenticatedChatWithNoEscalationToVoiceAndVideo:
+UnauthenticatedChatWithPostChatSurvey:
 AuthenticatedChat:
   orgId: ''
   orgUrl: ''
